--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -182,6 +182,9 @@
       }
 
       a {
+        left: 0;
+        @include transition(all, 0.175s, ease-in-out);
+
         &:hover {
           left: 5px;
         }
@@ -233,6 +236,7 @@
 
             > ul {
               display: none;
+              background-color: $cu-off-canvas-nav-background;
 
               > li {
                 border-top: 1px solid $cu-off-canvas-nav-border-secondary;
