adds black to omninav v2 variables to overwrite v1 black variable

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
@@ -4,6 +4,7 @@ $primary-nav-height: 60px;
 $square-icon-size: 16px;
 $utility-nav-height: 60px;
 $utility-nav-background-color: #676767;
+$black: #2f2f2f;
 
 // Off Canvas Nav
 $cu-off-canvas-nav-mobile-width: 85%;
