--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/off-canvas-nav.scss
@@ -319,9 +319,9 @@
 		background-repeat: no-repeat;
 		background-size: contain;
 	}
-	.ces {
-		background: image-url('off-canvas-header-ces.png'); // IE 8
-		background: image-url('off-canvas-header-ces.svg'), linear-gradient(transparent, transparent);
+	.education {
+		background: image-url('off-canvas-header-education.png'); // IE 8
+		background: image-url('off-canvas-header-education.svg'), linear-gradient(transparent, transparent);
 		background-repeat: no-repeat;
 		background-size: contain;
 	}
