switched demo html from law global nav to not-law global

--- a/app/views/omni_nav_v2/_global_nav.html.erb
+++ b/app/views/omni_nav_v2/_global_nav.html.erb
@@ -42,10 +42,9 @@
           </ul>
         </div>
       </li>
-      <li class="primary-link"><a>Faculty</a></li>
-      <li class="primary-link"><a>Careers</a></li>
+      <li class="primary-link"><a>Arts</a></li>
       <li class="primary-link">
-        <a>Current Students</a>
+        <a>Campus Life</a>
         <div class="global-nav-dropdown">
           <ul>
             <li><a class="icon icon-paw" href="http://www.chapmanathletics.com/landing/index">Athletics</a></li>
@@ -55,6 +54,18 @@
             <li><a class="icon icon-heart3" href="/students/health-and-safety/index.aspx">Health and Safety</a></li>
             <li><a class="icon icon-home2" href="/students/services/housing-and-residence/index.aspx">Residence Life</a></li>
             <li><a class="icon icon-smiley" href="/students/life/index.aspx">Student Life</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="primary-link">
+        <a>Research</a>
+        <div class="global-nav-dropdown">
+          <ul>
+            <li><a class="icon icon-medal" href="research/sponsored-projects-services/index.aspx">Sponsored Projects Services</a></li>
+            <li><a class="icon icon-clipboard5" href="research/integrity/index.aspx">Research Integrity</a></li>
+            <li><a class="icon icon-library4" href="research/institutes-and-centers/index.aspx">Institutes and Centers</a></li>
+            <li><a class="icon icon-lamp8" href="research/office-undergraduate-research-creative-activity/index.aspx">Undergraduate Research and Creative Activity</a></li>
+            <li><a class="icon icon-microscope" href="research/graduate-research/index.aspx">Graduate Research Support</a></li>
           </ul>
         </div>
       </li>
