--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -588,6 +588,7 @@ html.omni-nav-v2 {
           & > a {
             text-transform: uppercase;
             font-size: 15px;
+            white-space: nowrap;
           }
 
           &:hover {
