added whitespace setting to branded labels

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -526,6 +526,7 @@ html.omni-nav-v2 {
 
             a.branded-logo {
               vertical-align: baseline;
+              white-space: nowrap;
             }
           }
         }
