--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -889,7 +889,7 @@ html.omni-nav-v2 {
       padding: 1px 0 0 20px;
       border-left: 1px solid #2f2f2f;
       font-size: 18px;
-      font-family: 'minion-pro';
+      font-family: 'minion-pro', serif;
       font-style: italic;
 
       @include media($medium-screen) {
