--- a/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-results-header.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-results-header.scss
@@ -1,15 +1,15 @@
 $palettes: map-merge($palettes, (
-    'dap-results-header': (
-        'core': $black,
-        'background': $white
-    )
+	'dap-results-header': (
+		'core': $black,
+		'background': $white
+	)
 ));
 
 .dap-results-header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	
+
 	h2 {
 		opacity: 0;
 		color: $dark-gray;
@@ -30,6 +30,10 @@ $palettes: map-merge($palettes, (
 		display: block;
 		flex: 0 0 auto;
 
+		.no-js & {
+			display: none;
+		}
+
 		li {
 			cursor: pointer;
 			border-right: 2px solid $silver;
@@ -47,7 +51,7 @@ $palettes: map-merge($palettes, (
 
 				.no-touch &,
 				.no-js & {
-					
+
 					// scss-lint:disable NestingDepth
 					svg {
 						fill: $burgundy;
