Set up controller and routes to be more dynamic

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -56,8 +56,12 @@
       <p>The OmniNav navbar is built and distributed from Cascade Assets.</p>
       <ul>
         <li><%= link_to 'Static Sample', '/omninav' %></li>
-        <li><%= link_to 'Static Sample v2', '/omninav_v2' %></li>
-        <li><%= link_to 'Static Sample v2 - Branded', '/omninav_v2/law' %></li>
+        <li><%= link_to 'Static Sample v2 - Home', '/omninav_v2/home' %></li>
+        <li><%= link_to 'Static Sample v2 - 1 Column Law', '/omninav_v2/1col/law' %></li>
+        <li><%= link_to 'Static Sample v2 - 2 Column', '/omninav_v2/2col' %></li>
+        <li><%= link_to 'Static Sample v2 - 2 Column Communication', '/omninav_v2/2col/communication' %></li>
+        <li><%= link_to 'Static Sample v2 - 3 Column', '/omninav_v2/3col' %></li>
+        <li><%= link_to 'Static Sample v2 - 3 Column Communication', '/omninav_v2/3col/communication' %></li>
       </ul>
     </div>
   </div>
