--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -512,8 +512,12 @@ html.omni-nav-v2 {
 
       &.logo-container {
         svg.chapman-logo {
-          width: 256px;
+          width: 190px;
           height: 32px;
+
+          @include media($medium-screen) {
+            width: 256px;
+          }
         }
 
         @include media($medium-screen) {
