--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -10,15 +10,8 @@ html.omni-nav-v2 {
     padding-top: 120px;
   }
 
-  @include media($large-screen) {
+  @include bp(xl) {
     padding-top: 60px;
-  }
-
-  /* branded omninav always has primary nav stacked on top of global nav */
-  &.branded {
-    @include media($large-screen) {
-      padding-top: 120px;
-    }
   }
 
   &.utility-nav-open {
@@ -26,15 +19,8 @@ html.omni-nav-v2 {
       padding-top: 180px;
     }
 
-    @include media($large-screen) {
+    @include bp(xl) {
       padding-top: 120px;
-    }
-
-    /* since branded is min 120px height (global + primary), adding utility will always make it 180 */
-    &.branded {
-      @include media($medium-screen) {
-        padding-top: 180px;
-      }     
     }
   }
 }
@@ -50,28 +36,17 @@ html.omni-nav-v2 {
 
   /* Branded / Unbranded Variations
   ---------------------------------------- */
-  &.unbranded {
-    div#primary-nav div.global-nav {
-      /* In unbranded version, global nav float parallel to log. In branded, it
-         it stacks underneath. */
-      @include media($large-screen) {
-        display: inline-block;
-        float: right;
-        width: auto;
-        border-top: none;
-        margin: 14px $base-spacing;
-        padding: 0;
-      }
-    }
-  }
 
-  &.branded {
-    div#primary-nav div.global-nav {
-      /* When it stacks, primary-nav will already have bottom-border. */
-      @include media($large-screen) {
-        border-top: none;
-        border-bottom: 1px solid #8a8a8a;
-      }
+  /* Branded and unbranded break at the same place, for XL screens */
+  &.branded div#primary-nav div.global-nav, 
+  &.unbranded div#primary-nav div.global-nav {
+    @include bp(xl) {
+      display: inline-block;
+      float: right;
+      width: auto;
+      border-top: none;
+      margin: 14px $base-spacing;
+      padding: 0;
     }
   }
 
@@ -264,7 +239,7 @@ html.omni-nav-v2 {
         }
 
         //show all utility sections on large screen
-        @include media($large-screen) {
+        @include bp(xl) {
           &.utility-search {
             width: auto;
           }
@@ -354,7 +329,7 @@ html.omni-nav-v2 {
       height: 120px;
     }
 
-    @include media($large-screen) {
+    @include bp(xl) {
       height: $primary-nav-height;
     }
 
@@ -515,7 +490,7 @@ html.omni-nav-v2 {
           width: 190px;
           height: 32px;
 
-          @include media($medium-screen) {
+          @include bp(m) {
             width: 256px;
           }
         }
@@ -564,7 +539,7 @@ html.omni-nav-v2 {
           border-bottom: 1px solid #8a8a8a;
         }
 
-        @include media($large-screen) {
+        @include bp(xl) {
           border-bottom-width: 0px;
         }
 
@@ -625,6 +600,13 @@ html.omni-nav-v2 {
                 display: block;
               }
 
+              a:before { 
+                padding: 0.1em;
+                display: block;
+                margin: 3px 10px 10px 0;
+                float: left;
+              }
+
               &:last-of-type { border-bottom: none; }
 
               &:hover {
@@ -644,11 +626,6 @@ html.omni-nav-v2 {
 
             .icon-cu-window:before {
               font-size: 1.25em; 
-            }
-
-            a:before { 
-              padding-right: 8px;
-              margin: 3px 3px 10px 0;
             }
           }
         }
