Fixes education, new Attallah logo in off canvas

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -94,8 +94,8 @@
             background-size: contain;
           }
           .education {
-            background: image-url('off-canvas-header-ces.png'); // IE 8
-            background: image-url('off-canvas-header-ces.svg'), linear-gradient(transparent, transparent);
+            background: image-url('off-canvas-header-education.png'); // IE 8
+            background: image-url('off-canvas-header-education.svg'), linear-gradient(transparent, transparent);
             background-repeat: no-repeat;
             background-size: contain;
           }
