temp fix for long menu headers
future story: https://trello.com/c/lUotrjAd

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -209,6 +209,9 @@
           letter-spacing: 0.25px;
           text-transform: uppercase;
           border-bottom: 1px solid $cu-off-canvas-nav-border-secondary;
+          /* This can be removed when we address this story: https://trello.com/c/lUotrjAd
+            Long labels will be trimmed to fit on one line */
+          overflow: auto;
 
           a {
             color:$white;
