--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
@@ -17,3 +17,7 @@ $cu-off-canvas-nav-utility-background: #676767;
 
 //GCS Search box
 $gcs-search-box-height: 28px;
+
+// Breakpoint for large desktops
+// Custom for the current size of content in global nav + primary nav
+$xl-screen: 1300px;
