--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -490,7 +490,7 @@ html.omni-nav-v2 {
           width: 190px;
           height: 32px;
 
-          @include bp(m) {
+          @include media($medium-screen) {
             width: 256px;
           }
         }
