--- a/app/views/omni_nav_v2/_global_nav.html.erb
+++ b/app/views/omni_nav_v2/_global_nav.html.erb
@@ -5,6 +5,7 @@
         <a>About</a>
         <div  class="global-nav-dropdown">
           <ul>
+            <li><a class="icon icon-file-text" href="/about/index">Overview</a></li>
             <li><a class="icon icon-location" href="/about/maps-directions/index.aspx">Maps and Directions </a></li>
             <li><a class="icon icon-california" href="/about/visit-chapman/index.aspx">Visit Chapman</a></li>
             <li><a class="icon icon-cu-monogram" href="/discover/index.html">Discover Chapman</a></li>
@@ -19,6 +20,7 @@
         <a>Academics</a>
         <div class="global-nav-dropdown">
           <ul>
+            <li><a class="icon icon-file-text" href="/academics/index">Overview</a></li>
             <li><a class="icon icon-graduation" href="/academics/degrees-and-programs.aspx">Degrees &amp; Programs</a></li>
             <li><a class="icon icon-library2" href="/academics/schools-colleges.aspx">Schools &amp; Colleges</a></li>
             <li><a class="icon icon-calendar4" href="/academics/academic-calendar.aspx">Academic Calendar</a></li>
@@ -32,6 +34,7 @@
         <a>Admission</a>
         <div class="global-nav-dropdown">
           <ul>
+            <li><a class="icon icon-file-text" href="/admission/index">Overview</a></li>
             <li><a class="icon icon-bookmark" href="/admission/undergraduate/index.aspx">Undergraduate Admission</a></li>
             <li><a class="icon icon-pencil5" href="/admission/undergraduate/applynow.aspx">Undergraduate Application</a> </li>
             <li><a class="icon icon-bookmark2" href="/admission/graduate/index.aspx">Graduate Admission</a></li>
@@ -47,6 +50,7 @@
         <a>Campus Life</a>
         <div class="global-nav-dropdown">
           <ul>
+            <li><a class="icon icon-file-text" href="/campus-life/index">Overview</a></li>
             <li><a class="icon icon-paw" href="http://www.chapmanathletics.com/landing/index">Athletics</a></li>
             <li><a class="icon icon-hand" href="/diversity/index.aspx">Diversity and Inclusion</a></li>
             <li><a class="icon icon-calendar4" href="https://events.chapman.edu/ ">Events</a></li>
@@ -61,6 +65,7 @@
         <a>Research</a>
         <div class="global-nav-dropdown">
           <ul>
+            <li><a class="icon icon-file-text" href="/research/index">Overview</a></li>
             <li><a class="icon icon-medal" href="research/sponsored-projects-services/index.aspx">Sponsored Projects Services</a></li>
             <li><a class="icon icon-clipboard5" href="research/integrity/index.aspx">Research Integrity</a></li>
             <li><a class="icon icon-library4" href="research/institutes-and-centers/index.aspx">Institutes and Centers</a></li>
@@ -73,6 +78,7 @@
         <a>Support</a>
         <div class="global-nav-dropdown">
           <ul>
+            <li><a class="icon icon-file-text" href="/support-chapman/index">Overview</a></li>
             <li><a class="icon icon-envelop" href="/support-chapman/contact-us.aspx">Contact Development</a></li>
             <li><a class="icon icon-hand" href="/support-chapman/get-involved.aspx">Get Involved</a></li>
             <li><a class="icon icon-cu-monogram" href="/support-chapman/ways-to-give/areas-to-support.aspx">Areas to Support</a></li>
