center-aligns social dropdown

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -681,7 +681,7 @@ html.omni-nav-v2 {
       }
 
       ul.social-list {
-        text-align: left;
+        text-align: center;
         padding: 10px;
 
         li {
