Fixes hover issue with icons and text

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -380,13 +380,8 @@ html.omni-nav-v2 {
 
         svg {
           vertical-align: middle;
-          width: 18px;
-          height: 18px;
-
-          @include media($medium-screen) {
-            width: 22px;
-            height: 22px;
-          }
+          width: 22px;
+          height: 22px;
         }
       }
 
@@ -411,80 +406,58 @@ html.omni-nav-v2 {
         float: right;
         display: table;
         height: 60px;
-        line-height: 60px;
 
         .primary-nav-action {
-          height: 60px;
-          display: table-cell;
-          position: relative;
-          line-height: 60px;
-
           // without z-index, global nav dropdown overlaps primary icons
           z-index: 668;
+          display: table-cell;
+          position: relative;
+          text-align: center;
+          vertical-align: middle;
+          height: 60px;
+          cursor: pointer;
+
+          svg {
+            &.icon-open-search.hide,
+            &.icon-close-search.hide {
+              display: none;
+            }
+          }
 
           @include media($medium-screen) {
-            width: 60px;
             background-color: #2f2f2f;
             margin: 0 auto;
-          }
+            width: 60px;
 
-          .primary-nav-icon {
-            // The square width (60x60) only applies to the find & login icons on tablet, desktop
-            @include media($medium-screen) {
-              vertical-align: middle;
+            .nav-icon-text {
+              display: none;
+            }
+
+            // Text shows up for both login and search icons on hover
+            // Also stays for search while utility nav is open
+            &:hover .nav-icon-text,
+            &.utility-open .nav-icon-text.search {
+              display: block;
+              bottom: 5px;
+              color: $white;
               position: absolute;
-              text-align: center;
               width: 60px;
+
+              // Text-related CSS
+              line-height: normal;
+              font-size: 10px;
+              font-family: "futura-pt", verdana, sans-serif;
+              font-weight: 800;
+              text-transform: uppercase;
+            }
+
+            a.primary-nav-icon {
+              display: inline-block;
+              position: relative;
 
               svg {
+                // On mobile, fill is black
                 fill: $white;
-              }
-            }
-          }
-
-          &:hover {
-            .nav-icon-text {
-              @include bp(wildcard-max, $medium-screen) {
-                display: none;
-              }
-
-              line-height: normal;
-              bottom: 6px;
-              position: absolute;
-              width: 60px;
-              text-align: center;
-
-              a {
-                display: inline-block;
-                font-size: 10px;
-                font-family: "futura-pt", verdana, sans-serif;
-                font-weight: 800;
-                text-transform: uppercase;
-                color: $white;
-              }
-            }
-          }
-
-          //only search text ("Find") stays when utility nav is open
-          &.utility-open {
-            .nav-icon-text.search {
-              @include bp(wildcard-max, $medium-screen) {
-                display: none;
-              }
-
-              line-height: normal;
-              bottom: 5px;
-              position: absolute;
-              width: 60px;
-              text-align: center;
-
-              a {
-                display: inline-block;
-                font-size: 10px;
-                font-family: "futura-pt", verdana, sans-serif;
-                font-weight: 800;
-                text-transform: uppercase;
-                color: $white;
               }
             }
           }
@@ -757,18 +730,12 @@ html.omni-nav-v2 {
     }
 
     .primary-nav-icon {
+      // Spacing between search and login icons on mobile
       margin-right: 13px;
 
-      .icon-open-search, .icon-close-search {
-        &.hide {
-          display: none;
-        }
+      @include media($medium-screen) {
+        margin-right: 0px;
       }
-    }
-
-    .text {
-      margin-bottom: 0;
-      color: $white;
     }
   }
 
