Changed scrolling behavior to scroll to top of results on form change

--- a/subprojects/degrees-and-programs/source/static/app/sass/templates/_degrees-and-programs.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/templates/_degrees-and-programs.scss
@@ -2,19 +2,19 @@
 // scss-lint:disable IdSelector
 .degrees-and-programs {
 
-	&.ready,
-	.no-js & {
-
-		.dap-feature {
-			opacity: 1;
-		}
-
-	}
-
-	.dap-feature {
-		opacity: 0;
-		transition: opacity $transition-time;
-	}
+	// &.ready,
+	// .no-js & {
+	//
+	// 	.dap-feature {
+	// 		opacity: 1;
+	// 	}
+	//
+	// }
+	//
+	// .dap-feature {
+	// 	opacity: 0;
+	// 	transition: opacity $transition-time;
+	// }
 
 }
 // scss-lint:enable IdSelector
