Updates OmniNav2 sample in Cascade Assets views to match update velocity format.

--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -14,7 +14,7 @@
         <span class="close" id="js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
             <title></title>
-            <g id="icomoon-ignore"></g>
+            <g class="icomoon-ignore"></g>
             <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
           </svg>
         </span>
@@ -28,7 +28,7 @@
         <span class="close" id="js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
             <title></title>
-            <g id="icomoon-ignore"></g>
+            <g class="icomoon-ignore"></g>
             <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
           </svg>
         </span>
@@ -51,7 +51,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -71,7 +71,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -102,7 +102,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -120,7 +120,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -132,7 +132,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -147,7 +147,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -162,7 +162,7 @@
             <span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                 <title></title>
-                <g id="icomoon-ignore"></g>
+                <g class="icomoon-ignore"></g>
                 <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
               </svg>
             </span>
@@ -178,7 +178,7 @@
               <span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                   <title></title>
-                  <g id="icomoon-ignore"></g>
+                  <g class="icomoon-ignore"></g>
                   <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
                 </svg>
               </span>
@@ -200,7 +200,7 @@
               <span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
                   <title></title>
-                  <g id="icomoon-ignore"></g>
+                  <g class="icomoon-ignore"></g>
                   <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
                 </svg>
               </span>
