Adds placeholder to off-canvas sample dropdowns to make it clearer OmniNav is not broken.

--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -94,7 +94,7 @@
         <a class="toggle-menu-label" href="#">&lt; <%= @page_umbrella_category[1] %> Menu</a>
         <% end %>
       </div>
-      
+
       <ul>
         <li>
           <a>About</a>
@@ -125,6 +125,10 @@
               </svg>
             </span>
           </span>
+          <ul>
+            <li><a href="#">Foo</a></li>
+            <li><a href="#">Bar</a></li>
+          </ul>
         </li>
         <li>
           <a>Admission</a>
@@ -137,6 +141,10 @@
               </svg>
             </span>
           </span>
+          <ul>
+            <li><a href="#">Foo</a></li>
+            <li><a href="#">Bar</a></li>
+          </ul>
         </li>
         <li>
           <a>Arts</a>
@@ -152,6 +160,10 @@
               </svg>
             </span>
           </span>
+          <ul>
+            <li><a href="#">Foo</a></li>
+            <li><a href="#">Bar</a></li>
+          </ul>
         </li>
         <li>
           <a>Research</a>
@@ -167,6 +179,10 @@
               </svg>
             </span>
           </span>
+          <ul>
+            <li><a href="#">Foo</a></li>
+            <li><a href="#">Bar</a></li>
+          </ul>
         </li>
       </ul>
 
@@ -205,6 +221,10 @@
                 </svg>
               </span>
             </span>
+            <ul>
+              <li><a href="#">Foo</a></li>
+              <li><a href="#">Bar</a></li>
+            </ul>
           </li>
           <li>
             <a href="#">News</a>
