add href to email link in contact footer (1 column template)
add href to email link in contact footer (1 column template)

--- a/app/views/widgets/single_column/_contact_footer.html
+++ b/app/views/widgets/single_column/_contact_footer.html
@@ -8,7 +8,7 @@
 				</address>
 				<address class="contact-line-2">
 					<p class="address phone">(714)997-6711</p>
-					<a class="address email">dodgecollege@chapman.edu</a>
+					<a class="address email" href="mailto:dodgecollege@chapman.edu">dodgecollege@chapman.edu</a>
 				</address>
 			</div>
 		</div>
