--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/helpers/mixins-and-variables.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/helpers/mixins-and-variables.scss
@@ -90,9 +90,7 @@ Typically, if a color is used more than once or twice,
 it should be added here as a variable. Changing the value
 of these variables will affect the colors sitewide. */
 
-$cu-red: #98002e;
-// $cu-red2: #830c28; // Old red replaced by $cu-red to keep colors standard
-// $cu-red3: #98002E; // Old red replaced by $cu-red to keep colors standard
+$cu-red: #A50034;
 $cu-dark-red: #851c2b;
 $cu-off-white: #f7f6f0;
 $cu-light-grey: #eaeaea;
