Dashboard name update

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -55,7 +55,7 @@
       <h2>OmniNav</h2>
       <p>The OmniNav navbar is built and distributed from Cascade Assets.</p>
       <ul>
-        <li><%= link_to 'Static Sample', '/omninav' %></li>
+        <li><%= link_to 'Static Sample v1 - Home', '/omninav' %></li>
         <li><%= link_to 'Static Sample v2 - Home', '/omninav_v2/home' %></li>
         <li><%= link_to 'Static Sample v2 - 1 Column Law', '/omninav_v2/1col/law' %></li>
         <li><%= link_to 'Static Sample v2 - 2 Column', '/omninav_v2/2col' %></li>
