--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -1049,7 +1049,7 @@ a.cu_nav_button {
     // Logo
     a.cu-logo, a.default-logo-cu {
         // In Discover Chapman, Cascade appears to be commenting out the internal styles.
-        svg polygon.cls-1 { fill: #98002e; }
+        svg polygon.cls-1 { fill: $chapman-red; }
         svg path.cls-2 { fill: #231f20; }
     }
 
