--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -74,7 +74,6 @@ html { padding-top: $cu-nav-height; }
 
 html.cu-companion-bar { padding-top: $cu-nav-height + $cu-companion-height !important;}
 
-
 /***************************************************
 * Transitions
 ***************************************************/
@@ -108,7 +107,6 @@ html.cu-companion-bar { padding-top: $cu-nav-height + $cu-companion-height !impo
          -o-transition: top 0.15s 0s ease-out;
             transition: top 0.15s 0s ease-out;
 }
-
 
 /***************************************************
 * Universal Nav structure
@@ -247,9 +245,6 @@ a.cu_nav_button {
     }
 
 }
-
-
-
 
 /***************************************************
 * SEARCH
@@ -725,7 +720,7 @@ a.cu_nav_button {
             display: block;
             height:27px;
             width: 100%;
-            background:#98002e;
+            background:$chapman-red;
             color:#ffffff;
             border:none;
             border-left:none;
@@ -735,7 +730,7 @@ a.cu_nav_button {
             cursor: pointer;
         }
 
-        #cu_submit:hover { background:#C92741; }
+        #cu_submit:hover { background:#C8003F; }
 
         #cu_username,
         #cu_password {
